--- a/projects/ngx-onesignal/package.json
+++ b/projects/ngx-onesignal/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ngx-onesignal",
+  "name": "@referrizer/ngx-onesignal",
   "version": "10.0.2",
   "peerDependencies": {
     "@angular/common": "^10.2.0",
