chore(ngx-onesignal): update angular on version 11

--- a/angular.json
+++ b/angular.json
@@ -41,7 +41,6 @@
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": true,
-              "extractCss": true,
               "namedChunks": false,
               "aot": true,
               "extractLicenses": true,
@@ -147,7 +146,7 @@
       "prefix": "lib",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/ngx-onesignal/tsconfig.lib.json",
             "project": "projects/ngx-onesignal/ng-package.json"
