--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
     "tsickle": "^0.39.1",
     "tslib": "^2.0.0",
     "tslint": "~6.1.3",
-    "typescript": "~4.0.5",
+    "typescript": "^4.1.6",
     "zone.js": "~0.10.3"
   }
 }
