--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "prestart": "check-node-version --node 12",
     "pretest": "check-node-version --node 12",
     "start": "ng serve --port 4000 --ssl true --ssl-key \"tools/ssh/server.key\" --ssl-cert \"tools/ssh/server.crt\"",
-    "build.test": "ng build --prod && npx http-server ./dist/client -p 4000 -S -K tools/ssh/server.key -C tools/ssh/server.crt",
+    "build.test": "ng build --configuration production && npx http-server ./dist/client -p 4000 -S -K tools/ssh/server.key -C tools/ssh/server.crt",
     "build": "ng build ngx-onesignal && npm run build.schematics",
     "build.schematics": "rm -fr dist/schematics && npx tsc -p tools/schematics/tsconfig.json && npx ts-node -P ./tools/scripts/tsconfig.json ./tools/scripts/copy.ts ",
     "format": "prettier src/**/*.ts tools/**/*.ts projects/**/*.ts --write",
@@ -40,9 +40,9 @@
     "sandbox.nx.ng-add.local": "cd sandbox/nx && npm ci && ng add @angular/pwa && npm link ngx-onesignal && HAS_SANDBOX=1 ng g ngx-onesignal:ng-add --appId=XXXXXXXX-XXXX",
     "sandbox.test": "npm run build && npm run sandbox.link && npm run sandbox.clean && npm run sandbox.pack && npm run sandbox.9.ng-add.local && npm run sandbox.10.ng-add.local && npm run sandbox.9.test:sandbox && npm run sandbox.10.test:sandbox && npm run sandbox.nx.ng-add.local && npm run sandbox.nx.test:sandbox",
     "sandbox.test:unit": "npm run build.schematics && jasmine src/**/*_spec.js",
-    "sandbox.9.test:sandbox": "cd sandbox/9 && npm run build -- --prod && npm run lint  && npm run test -- --watch=false --progress=false --browsers=ChromeHeadlessCI",
-    "sandbox.10.test:sandbox": "cd sandbox/10 && npm run build -- --prod && npm run lint  && npm run test -- --watch=false --progress=false --browsers=ChromeHeadlessCI",
-    "sandbox.nx.test:sandbox": "cd sandbox/nx && npm run build -- --prod && npm run lint  && npm run test -- --watch=false"
+    "sandbox.9.test:sandbox": "cd sandbox/9 && npm run build -- --configuration production && npm run lint  && npm run test -- --watch=false --progress=false --browsers=ChromeHeadlessCI",
+    "sandbox.10.test:sandbox": "cd sandbox/10 && npm run build -- --configuration production && npm run lint  && npm run test -- --watch=false --progress=false --browsers=ChromeHeadlessCI",
+    "sandbox.nx.test:sandbox": "cd sandbox/nx && npm run build -- --configuration production && npm run lint  && npm run test -- --watch=false"
   },
   "main": "./dist/ngx-onesignal/bundles/ngx-onesignal.umd.js",
   "module": "./dist/ngx-onesignal/fesm5/ngx-onesignal.js",
@@ -65,23 +65,23 @@
   "private": false,
   "peerDependencies": {},
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.19",
-    "@angular-devkit/schematics": "~11.2.19",
+    "@angular-devkit/build-angular": "~12.2.18",
+    "@angular-devkit/schematics": "~12.2.18",
     "@angular-devkit/schematics-cli": "^0.1102.19",
-    "@angular/animations": "~11.2.14",
+    "@angular/animations": "~12.2.17",
     "@angular/cdk": "^11.2.13",
-    "@angular/cli": "~11.2.19",
-    "@angular/common": "~11.2.14",
-    "@angular/compiler": "~11.2.14",
-    "@angular/compiler-cli": "~11.2.14",
-    "@angular/core": "~11.2.14",
-    "@angular/forms": "~11.2.14",
-    "@angular/language-service": "~11.2.14",
-    "@angular/platform-browser": "~11.2.14",
-    "@angular/platform-browser-dynamic": "~11.2.14",
+    "@angular/cli": "~12.2.18",
+    "@angular/common": "~12.2.17",
+    "@angular/compiler": "~12.2.17",
+    "@angular/compiler-cli": "~12.2.17",
+    "@angular/core": "~12.2.17",
+    "@angular/forms": "~12.2.17",
+    "@angular/language-service": "~12.2.17",
+    "@angular/platform-browser": "~12.2.17",
+    "@angular/platform-browser-dynamic": "~12.2.17",
     "@angular/pwa": "~0.1102.19",
-    "@angular/router": "~11.2.14",
-    "@angular/service-worker": "~11.2.14",
+    "@angular/router": "~12.2.17",
+    "@angular/service-worker": "~12.2.17",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "@types/jasmine": "~3.6.0",
@@ -94,21 +94,21 @@
     "husky": "^4.3.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.2.3",
+    "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^11.2.4",
+    "ng-packagr": "^12.2.7",
     "npm-check-updates": "^3.1.21",
     "prettier": "^1.17.0",
     "protractor": "~7.0.0",
     "rxjs": "~6.6.3",
     "ts-node": "~7.0.0",
     "tsickle": "^0.39.1",
-    "tslib": "^2.0.0",
+    "tslib": "^2.8.0",
     "tslint": "~6.1.3",
-    "typescript": "^4.1.6",
-    "zone.js": "~0.10.3"
+    "typescript": "^4.3.5",
+    "zone.js": "~0.11.4"
   }
 }
