--- a/angular.json
+++ b/angular.json
@@ -65,20 +65,24 @@
               ],
               "serviceWorker": true,
               "ngswConfigPath": "src/ngsw-config.json"
-            }
+            },
+            "development": {}
           },
-          "defaultConfiguration": ""
+          "defaultConfiguration": "production"
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "client:build"
           },
           "configurations": {
             "production": {
               "browserTarget": "client:build:production"
+            },
+            "development": {
+              "browserTarget": "client:build:development"
             }
-          }
+          },
+          "defaultConfiguration": "development"
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
@@ -126,14 +130,17 @@
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "client:serve"
+            "protractorConfig": "e2e/protractor.conf.js"
           },
           "configurations": {
             "production": {
               "devServerTarget": "client:serve:production"
+            },
+            "development": {
+              "devServerTarget": "client:serve:development"
             }
-          }
+          },
+          "defaultConfiguration": "development"
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
@@ -157,7 +164,8 @@
           "options": {
             "tsConfig": "projects/ngx-onesignal/tsconfig.lib.json",
             "project": "projects/ngx-onesignal/ng-package.json"
-          }
+          },
+          "configurations": {}
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
